glx/testdata/invalid/custom-vocab-edge-cases/persons/person-custom.glx
persons:
  person-custom:
    properties:
      name:
        value: "John Smith"
        fields:
          given: "John"
          surname: "Smith"
      custom_property: "custom value"
      birth_place: "place-leeds"


